--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
-  <head>my site</head>
+  <head>
+    <title>my site</title>
+  </head>
   <body>
-     hello world, hello web!
+     hello world, hello web!!
   </body>
 </html>
