--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>随记</title>
+    <link rel="icon" href="favicon.ico">
     <style>
       * {
         box-sizing: border-box;
