--- a/index.html
+++ b/index.html
@@ -73,10 +73,14 @@
         window.alert( event.target.dataset.src);
         if (event.target.nodeName !== "LI") return;
         audio.src = event.target.dataset.src || "";
-        audio.oncanplay = function () {
+        audio.addEventListener("canplay", function () {
           window.alert("play...");
           audio.play();
-        };
+        }, false);
+        // audio.oncanplay = function () {
+        //   window.alert("play...");
+        //   audio.play();
+        // };
       };
     </script>
   </body>
