[MOD]修改资源引用路径

--- a/html/20220617.html
+++ b/html/20220617.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="渐变色文字 background-clip text-fill-color ">
     <title>随记</title>
-    <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./assets/css/common.css" />
-    <link rel="stylesheet" href="./assets/js/highlight/styles/github.min.css" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/assets/css/common.css" />
+    <link rel="stylesheet" href="/assets/js/highlight/styles/github.min.css" />
     <script src="https://cdn.jsdelivr.net/gh/ireade/caniuse-embed/public/caniuse-embed.min.js"></script>
     <style>
       .tagline {
@@ -90,7 +90,7 @@
         >
           <img
             style="margin-top: 10px"
-            src="./assets/images/20220617/2.png"
+            src="/assets/images/20220617/2.png"
             alt="加载失败"
           />
         </a>
@@ -135,7 +135,7 @@
         // };
       };
     </script>
-    <script src="./assets/js/highlight/highlight.min.js"></script>
+    <script src="/assets/js/highlight/highlight.min.js"></script>
     <script>
       hljs.highlightAll();
     </script>
