--- a/index.html
+++ b/index.html
@@ -34,14 +34,22 @@
       a {
         text-decoration: none;
       }
+      
+      a:visited {
+        color: black;
+      }
+
+      a:hover {
+        color: rgb(61, 174, 240);
+      }
     </style>
   </head>
 
   <body>
     <main>BUILDING</main>
     <footer>
-      ©2022 note 鲁ICP备2020044946号
-      <a href="https://beian.miit.gov.cn">工信部</a>
+      ©2022 note 
+      <a href="https://beian.miit.gov.cn" target="_blank">鲁ICP备2020044946号</a>
     </footer>
   </body>
 </html>
