--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>BUILDING</main>
     <footer>
       ©2022 note 
-      <a href="https://beian.miit.gov.cn" target="_blank">鲁ICP备2020044946号-1</a>
+      <!-- <a href="https://beian.miit.gov.cn" target="_blank">鲁ICP备2020044946号-1</a> -->
     </footer>
   </body>
 </html>
