change audio play

--- a/html/20220617.html
+++ b/html/20220617.html
@@ -116,11 +116,13 @@
       // ul
       var ulEle = document.querySelector("ul");
       ulEle.onclick = function (event) {
-        console.log(event);
-        window.alert(event.target.nodeName);
-        window.alert(event.target.dataset.src);
+        // console.log(event);
+        // window.alert(event.target.nodeName);
+        // window.alert(event.target.dataset.src);
+        window.alert("wait a minute");
         if (event.target.nodeName !== "LI") return;
         audio.src = event.target.dataset.src || "";
+        // audio.loop = true;
         audio.addEventListener(
           "canplay",
           function () {
